<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:title="Settings"
        android:showAsAction="never" />

    <!-- Search, should appear as action button -->
    <item android:id="@+id/new_line"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_share"
        android:title="@string/newline"
        android:showAsAction="always" />
    <item android:id="@+id/action_new"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/newbox"
        android:showAsAction="always" />
    <item android:id="@+id/action_trash"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_discard"
        android:title="@string/trash"
        android:showAsAction="always" />
    <item android:id="@+id/new_rel"
    android:orderInCategory="100"
    android:icon="@drawable/ic_action_split"
    android:title="To add a Relationship click icon and then 2 boxes which you want to connect"
    android:showAsAction="always" />
    <item android:id="@+id/action_undo"
        android:orderInCategory="100"
        android:icon="@drawable/undo_selected"
        android:title="@string/undo"
        android:showAsAction="always" />
    <item android:id="@+id/action_redo"
        android:orderInCategory="100"
        android:icon="@drawable/redo_selected"
        android:title="@string/redo"
        android:showAsAction="always" />
</menu>