<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="1">
    <LinearLayout   android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/background"
        android:id="@+id/textViewBackgroundColor"
        android:phoneNumber="false"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp" />

        <View android:id="@+id/sheet_color"
            android:background="@drawable/rect_background"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp" >
        </View>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wallpaper"
        android:id="@+id/textView2"
        android:textSize="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intensity"
        android:id="@+id/textView3"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp" />

    <SeekBar
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarIntensivity"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multi_branch"
            android:id="@+id/textView4"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black"
            android:textSize="25dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:id="@+id/checkBox"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>

</LinearLayout>
