<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView3" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/shape"
                android:id="@+id/textView"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <Spinner
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerBoxShapes"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="0.59" />
                <View android:id="@+id/box_color"
                    android:background="@drawable/rect_background"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="20dp" >
                </View>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/line"
                android:id="@+id/textView2"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <Spinner
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerLines"
                    android:layout_weight="0.59"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp" />
                <View android:id="@+id/line_color"
                    android:background="@drawable/rect_background"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="20dp" >
                </View>
            </LinearLayout>

            <Spinner
                android:layout_width="241dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerThin"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/text"
                    android:id="@+id/textView3"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/height"
                        android:id="@+id/textView4"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/black"
                        android:textSize="15dp" />

                    <Spinner
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinnerHeigth"
                        android:layout_gravity="right"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp" />

                    <View android:id="@+id/text_color"
                        android:background="@drawable/rect_background"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="20dp" >
                    </View>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/align"
                        android:id="@+id/textView5"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/black" />

                    <Spinner
                        android:layout_width="210dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinnerAlign"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/font"
                        android:id="@+id/textView6"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/black" />

                    <Spinner
                        android:layout_width="213dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinnerFonts"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp" />
                </LinearLayout>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:id="@+id/checkBoxBold"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/black"
                    android:text="Bold" />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:id="@+id/checkBoxItalic"
                    android:layout_marginLeft="10dp"
                    android:text="Italic"
                    android:textColor="@color/black" />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:id="@+id/checkBoxStrikeOut"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/black"
                    android:text="Strikeout" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>